5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1758_1576.log
== TEST (2019-05-23 10:32:12) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
cv=0
ve=0 
vb=0
while cv!=
-- ERROR:
File "XXXX", line 8
    while cv!=
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:39:05) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
cv=0
ve=0 
vb=0
print(v[cv])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:40:15) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
cv=0
ve=0 
vb=0
print(v[0])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:40:56) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
cv=0
ve=0 
vb=0
print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:40:57) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
cv=0
ve=0 
vb=0
print(v[0])
-- EXECUTION TIME:
0.4212
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
33
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
33
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:40:59) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
cv=0
ve=0 
vb=0
print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:50:46) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
a=v[cv]
b=v1[cv1]
cv=0
cv1=0
ve=0 
vb=0
while a!=max(v):
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:51:15) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while a!=max(v):
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:51:48) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while a!=max(v):
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	print(ve,vb)
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:54:31) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while a!=v[-1:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	print(ve,vb)
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
File "XXXX", line 12
    if a==11 and b==22:
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:54:36) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while a!=v[-1]:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	print(ve,vb)
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:55:29) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while a!=v[-1]:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	a=v[cv]
	b=v1[cv1]
	print(ve,vb)
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:58:13) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while a!=size(a):
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	a=v[cv]
	b=v1[cv1]
	print(ve,vb)
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:01:20) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	s=s+1
	print(ve,vb)
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:03:49) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
	
	print(ve,vb)
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:04:09) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:04:44) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- EXECUTION TIME:
0.517955
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:05:37) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:05:49) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:06:25) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:06:34) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:06:46) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- EXECUTION TIME:
0.421865
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:06:57) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:09:02) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:10:31) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:10:39) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- EXECUTION TIME:
0.337879
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:10:53) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:13:07) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
	print(ve,vb)
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:15:02) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
	print(ve,vb,a,b)
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:15:11) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
	print(ve,vb,a,b)
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:15:50) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	a=v[cv]
	b=v1[cv1]
	s=s+1
	print(ve,vb,a,b)
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:17:30) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	a=v[cv]
	b=v1[cv1]
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
	print(ve,vb,a,b)
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:18:04) 
-- CODE:
from numpy import*
v= array(eval(input("digite um vetor: ")))
v1= array(eval(input("digite um vetor: ")))
t= size(v)
s=0
cv=0
cv1=0
a=v[cv]
b=v1[cv1]
ve=0 
vb=0
while s!=t:
	a=v[cv]
	b=v1[cv1]
	if a==11 and b==22:
		ve=ve+0
		vb=vb+1
	elif a==11 and b==33:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==11:
		ve=ve+1
		vb=vb+0
	elif a==22 and b==33:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==11:
		ve=ve+0
		vb=vb+1
	elif a==33 and b==22:
		ve=ve+1
		vb=vb+0
	else:
		ve=ve+0
		vb=vb+0
	cv=cv+1
	cv1=cv1+1
	s=s+1
if ve>vb:
	print(t)
	print("EUSAPIA")
elif ve<vb:
	print(t)
	print("BARSANULFO")
elif ve==vb:
	print(t)
	print("EMPATE")
-- EXECUTION TIME:
0.506199
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
